fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -522,7 +522,7 @@ html {
     }
     header {
         width: 100%;
-        height: 30em;
+        height: 50em;
         margin-top: 1em;
     }
     nav ul {
